fix alignment of photo

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ table {
 
 .intro {
 	margin: 0 auto;
-	padding-top: 100px;
+	padding-top: 60px;
     padding-bottom: 100px;
 }
 
